solve kuratovsky problem #2

--- a/graphs-intro/problems.tex
+++ b/graphs-intro/problems.tex
@@ -17,6 +17,7 @@
 %% Шрифты
 \usepackage{euscript} % Шрифт Евклид
 \usepackage{mathrsfs} % Красивый матшрифт
+\usepackage{pifont}   % Dingbats
 
 %% Перенос знаков в формулах (по Львовскому)
 \newcommand*{\hm}[1]{#1\nobreak\discretionary{}{\hbox{$\mathsurround=0pt #1$}}{}}
@@ -38,6 +39,7 @@
 
 \def\ilet{$\gimel\;$}
 \def\iiff{$\;\Longleftrightarrow\;$}
+\def\iiTODO{\guillemotleft$\mathcal{TODO}$\guillemotright\textellipsis}
 
 %%% Заголовок
 \title{Основы теории графов. Задачи.}
@@ -52,19 +54,48 @@
 
 \section{Основы}
 
+\iiTODO
+
+
+
+\section{Деревья}
+
+\iiTODO
+
+
+
+\section{Эйлеровы графы}
+
+\iiTODO
+
+
+
+\section{Паросочетания I}
+
+\iiTODO
+
+
+
+\section{Гамильтоновы графы}
+
+\iiTODO
+
+
+
+\section{Графы деБрейна}
+
+\iiTODO
+
 
 
 \section{Вершинная связность}
 
-\subsection{Задачи}
+\iiTODO
 
-\subsection{Иллюстрации}
 
 
 
 \section{Рёберная связность}
-
-\subsection{Задачи}
 
 \begin{problem}
 	Рассмотрим граф $G$ с двумя выделенными несмежными вершинами $s$ и $t$. Множество вершин $X$, не содержащее вершин $s$ и $t$, назовём вершинным разрезом, если после его удаления из графа пути между $s$ и $t$ будут отсутствовать.
@@ -97,7 +128,7 @@
 	Найденный алгоритмом Форда-Фалкерсона максимальный поток -- это поток через минимальный рёберный разрез в $H'$ (какой бы он ни был, он будет среди синих рёбер) и соответвествует такому набору рёбер в $H$, что при его удалении путей между $s2$ и $t1$ не останется. Таким образом, максимальный поток в $H'$ даст нам размер минимального вершинно-разделяющего множества в $G$.
 \end{proof}
 
-\subsection{Иллюстрации}
+\iiTODO
 
 
 
@@ -134,6 +165,10 @@
    = \mathrm{def}(G') - 1 = 0 - 1 = -1 $
   Что и требовалось доказать. 
 \end{proof}
+
+\iiTODO
+
+
 \subsection{Иллюстрации}
 
 \begin{figure}[H]
@@ -156,13 +191,15 @@
 
 
 
-\section{Раскраска}
+
+\section{Раскраски}
+
+\iiTODO
 
 
 
-\section{Планарные графы}
 
-\subsection{Задачи}
+\section{Планарные графы I}
 
 \begin{problem}
 	Без использования теоремы о четырех красках доказать, что любой планарный связный граф, построенный на не более чем $n=11$ вершинах, является $4$-раскрашиваемым. \\
@@ -192,5 +229,36 @@
 	Сначала выбираем пару смежных вершин 1(красный)-3(жёлтый). Пытаемся перекрасить 1-ю в желтый, если же у неё есть жёлтый сосед 1', пытаемся перекрасить его в красный, при неудаче рассматриваем соседей соседа итд. Если удалось, меняем цвета в цепочке, 1-ю в жёлтый, 0-ю в красный и празднуем успех. В случае полной неудачи, худший случай - это когда цепочка дотянется до вершины 3. Тогда выбираем вторую пару 2(синий)-4(зелёный) и пытаемся перекрасить 4-ю в синий, а если найдётся синий сосед 4', пытаемся раскрасить его в зелёный, при неудаче тянем цепочку дальше. Рано или поздно сине-зелёная цепочка упрётся в красно-жёлтую, потому что та образует вместе с вершиной 0 замкнутый цикл, так что в этом случае удача нам гарантирована. Это доказывает шаг индукции и завершает задачу.
 \end{proof}
 
+\iiTODO
+
+
+
+
+\section{Планарные графы II}
+
+\begin{problem}
+	Доказать с помощью теоремы Куратовского непланарность графа $G$, изображенного на рисунке:
+	\\ \includegraphics[width=3cm]{kuratovsky-task2-stage0-8angles.png}
+\end{problem}
+\begin{proof}
+	Докажем, что подграф нашего графа, полученный \textit{удалением одного радиального ребра}, является подразбиением графа $K_{3,3}$, что по критерию Куратовского гарантирует непланарность.
+	\\ Пронумеруем вершины исходного графа:
+	\\ \includegraphics[width=5cm]{kuratovsky-task2-stage1.png}
+	\\ В качестве подмножества для критерия возьмём граф, в котором удалено одно радиальное ребро, например ребро 4-8:
+	\\ \includegraphics[width=5cm]{kuratovsky-task2-stage2.png}
+	\\ Cмежные с удаленным ребром вершины 4,8 в подмножестве имеют степень 2 и являются \textit{подразбиением} графа, к которому мы стремимся. Удалим их, заменив на рёбра:
+	\\ \includegraphics[width=5cm]{kuratovsky-task2-stage3.png}
+	\\ Получившийся граф изоморфен графу $K_{3,3}$. Просто переставим вершины на рисунке для наглядности:
+	\\ \includegraphics[width=5cm]{kuratovsky-task2-stage4.png}
+	\\ Доказано.
+\end{proof}
+
+
+\iiTODO
+
+
+
+
+\vspace{48pt} \noindent \hrulefill~ \raisebox{-8pt}[10pt][10pt]{\Huge\ding{102}}~ \hrulefill
 
 \end{document}
