solve kuratowsky problem #1

--- a/graphs-intro/problems.tex
+++ b/graphs-intro/problems.tex
@@ -232,9 +232,27 @@
 \iiTODO
 
 
-
+kuratovsky-task1-stage0.png
 
 \section{Планарные графы II}
+
+\begin{problem}
+	Доказать с помощью теоремы Куратовского непланарность графа $G$, изображенного на рисунке:
+	\\ \includegraphics[width=3cm]{kuratovsky-task1-stage0.png}
+\end{problem}
+\begin{proof}
+	Докажем, что подграф нашего графа, полученный \textit{удалением 4 рёбер}, является подразбиением графа $K_5$, что по критерию Куратовского гарантирует непланарность.
+	\\ Пронумеруем вершины исходного графа:
+	\\ \includegraphics[width=5cm]{kuratovsky-task1-stage1.png}
+	\\ В качестве подмножества для критерия возьмём граф, в котором удалены рёбра 4-1,4-6 слева и 5-3,5-9 справа:
+	\\ \includegraphics[width=5cm]{kuratovsky-task1-stage2.png}
+	\\ Вершины 1,6,3,9 в результате имеют степень 2 и являются \textit{подразбиением} графа, к которому мы стремимся (для ясности немного переместим эти вершины):
+	\\ \includegraphics[width=5cm]{kuratovsky-task1-stage3.png}
+	\\ Удалим подразбиения, заменив на прямые рёбра:
+	\\ \includegraphics[width=5cm]{kuratovsky-task1-stage4.png}
+	\\ Получившийся граф изоморфен графу $K_5$. Доказано.
+\end{proof}
+
 
 \begin{problem}
 	Доказать с помощью теоремы Куратовского непланарность графа $G$, изображенного на рисунке:
