solve kuratovsky problem #3

--- a/graphs-intro/problems.tex
+++ b/graphs-intro/problems.tex
@@ -272,6 +272,18 @@ kuratovsky-task1-stage0.png
 \end{proof}
 
 
+\begin{problem}
+	Найти выпуклое вложение в плоскость графа $G$, показанного на рисунке:
+	\\ \includegraphics[width=3cm]{kuratovsky-task3-stage0.png}
+\end{problem}
+\begin{proof}
+	Пронумеруем вершины исходного графа:
+	\\ \includegraphics[width=7cm]{kuratovsky-task3-stage1.png}
+	\\ И предъявим вложение:
+	\\ \includegraphics[width=9cm]{kuratovsky-task3-stage2.png}
+\end{proof}
+
+
 \iiTODO
 
 
