discrete math combinatorics

--- a/graphs-intro/problems.tex
+++ b/graphs-intro/problems.tex
@@ -39,10 +39,11 @@
 
 \def\ilet{$\gimel\;$}
 \def\iiff{$\;\Longleftrightarrow\;$}
+\def\iiChi{\mathcal{X}}
 \def\iiTODO{\guillemotleft$\mathcal{TODO}$\guillemotright\textellipsis}
 
 %%% Заголовок
-\title{Основы теории графов. Задачи.}
+\title{Основы теории графов. \\ Задачи.}
 \author{}
 \date{}
 
@@ -194,6 +195,16 @@
 
 \section{Раскраски}
 
+\begin{problem}
+	Доказать, что в любом графе $G$ существует такое линейное упорядочение его вершин, при котором жадный алгоритм раскраски окрасит вершины графа ровно в $\iiChi(G)$ цветов.
+\end{problem}
+\begin{proof}
+	Выделяем в графе максимальное независимое множество вершин $S_1$. Они несмежны между собой и получат один цвет $C_1$. Теперь выбираем среди оставшихся вершин графа вершины, смежные с $S_1$ и среди них выбираем максимально независимое множество $S_2$. Опять, их цвет $C2$ одинаковый в силу несмежности, но отличается от $C_1$ в силу смежности с $S_1$. Среди оставшихся выбираем вершины, смежные с $S_1 \cup S_2$, а среди них - максимальное независимое множество $S_3$. Они получат новый цвет $C_3$ итд до $S_q$. В силу максимальности независимых множеств на каждом этапе их общее число $q$ минимально, т.е. равно хроматическому числу $q = \iiChi(G)$.
+	
+	Теперь расставим все вершины по порядку так: сначала вершины из $S_1$ в любом порядке (номера $1,2,...,|S_1|$), потом из $S_2$ в любом порядке ($|S_1|+1$, $|S_1|+2$, ..., $|S_1|+|S_2|$) итд до $S_q$. При проходе в таком порядке жадный алгоритм будет замечать смежность вершин очередного множества $S_i$ только с предыдущими $S_{j<i}$ (поскольку последующие еще не раскрашены) и выдаст ту же раскраску $C_1...C_q$.
+\end{proof}
+
+
 \iiTODO
 
 
@@ -232,7 +243,6 @@
 \iiTODO
 
 
-kuratovsky-task1-stage0.png
 
 \section{Планарные графы II}
 
@@ -281,6 +291,21 @@ kuratovsky-task1-stage0.png
 	\\ \includegraphics[width=7cm]{kuratovsky-task3-stage1.png}
 	\\ И предъявим вложение:
 	\\ \includegraphics[width=9cm]{kuratovsky-task3-stage2.png}
+\end{proof}
+
+
+\begin{problem}
+	Для карты на сфере записать перестановки $\sigma$, $\alpha$, $\varphi$
+	\\ \includegraphics{permutations-on-sphere.png}
+\end{problem}
+\begin{proof}
+	\ \\
+	$\sigma = (1 7 4 5) (2 6) (3 8)$ \\
+	$\alpha = (1 6) (2 8) (3 7) (5 4)$ \\
+	$\varphi = (5) (1 2 3 4) (7 8 6)$ \\
+	$\varphi = \sigma \cdot \alpha \qquad \sigma = \varphi \cdot \alpha \qquad \alpha = \alpha^{-1}$ \\
+	$n=|\sigma|=3 ,\; m=|\alpha|=4 ,\; r=|\varphi|=3$ \\
+	$g = (2-n+m-r)/2 = 0$  
 \end{proof}
 
 
