--- a/graphs-intro/theory.tex
+++ b/graphs-intro/theory.tex
@@ -51,7 +51,7 @@
 \def\iiTODO{\guillemotleft$\mathcal{TODO}$\guillemotright\textellipsis}
 
 %%% Заголовок
-\title{Основы теории графов. Теория}
+\title{Основы теории графов.\\Теория.}
 \author{}
 \date{}
 
@@ -408,13 +408,39 @@
 \begin{definition}[подразбиение графа] добавление вершин $\deg=2$ внутри рёбер \end{definition}
 
 \begin{theorem}[критерий Куратовского]
-	граф не планарный \iiff он содержит подразбиение $K_5$ или $K_{3,3}$
+	граф планарный \iiff он не содержит подразбиение $K_5$ или $K_{3,3}$
 \end{theorem}
 
 \begin{theorem}[Татт]
 	\iiany 3-связный планарный граф можно вложить на плоскость так, что \iiany внутренняя грань будет выпуклым многоугольником
 \end{theorem}
 
+\begin{definition}[Минор]
+	получен из графа удалением или стягиванием рёбер
+\end{definition}
+
+\begin{property}
+	минор планарного графа будет планарным
+\end{property}
+
+\begin{theorem}[Вагнер]
+	граф планарный \iiff не содержит миноров $K_5$ или $K_{3,3}$
+\end{theorem}
+
+\begin{definition}
+	вложение графа в поверхность рода $g$ правильное, если при разрезании на грани получатся (криволинейные) многоугольники (а не цилиндры итд), т.е. получится карта
+\end{definition}
+
+\begin{property}
+	Род поверхности для сферы $g=0$, род тора $g=1$ (одна дырка).
+\end{property}
+
+\begin{theorem}[Эйлера]
+	Характеристика Эйлера для карты (укладки графа): $\iiChi(M) = V+F-E$.
+	Если $\iiChi(M) = 2-2g$ (2 на сфере, 0 на торе), то укладка (вложение) правильная, иначе -- нет. 
+\end{theorem}
+
+$K_5$ и $K_{3,3}$ можно вложить в тор.
 
 \iiTODO
 
