chromatic number problems

--- a/graphs-intro/problems.tex
+++ b/graphs-intro/problems.tex
@@ -29,13 +29,21 @@
 
 \usepackage{color}
 
-\usepackage{graphicx}
-\usepackage{wrapfig}
-\usepackage{float}
+\usepackage{graphicx,wrapfig,float}
+\numberwithin{figure}{section}
 \graphicspath{{images-problems/}}
+
+\usepackage{hyperref}
+\hypersetup{
+	colorlinks=true,
+	linkcolor=blue,
+	filecolor=magenta,      
+	urlcolor=cyan,
+}
 
 \theoremstyle{remark}
 \newtheorem{problem}{Зад.}[section]
+\renewcommand\qedsymbol{$\blacksquare$}
 
 \def\ilet{$\gimel\;$}
 \def\iiff{$\;\Longleftrightarrow\;$}
@@ -50,6 +58,8 @@
 \begin{document}
 
 \maketitle
+
+\tableofcontents
 
 
 
@@ -195,6 +205,10 @@
 
 \section{Раскраски}
 
+
+\subsection{Хроматическое число}
+
+
 \begin{problem}
 	Доказать, что в любом графе $G$ существует такое линейное упорядочение его вершин, при котором жадный алгоритм раскраски окрасит вершины графа ровно в $\iiChi(G)$ цветов.
 \end{problem}
@@ -205,8 +219,129 @@
 \end{proof}
 
 
-\iiTODO
+\begin{problem}[\href{https://stepik.org/lesson/12296/step/4}{ссылка}]
 
+	Граф G называется совершенным, если $\iiChi(G)=\omega(G)$, где $\omega(G)$ -- его кликовое число.
+
+	Рассмотрим $n$ замкнутых интервалов $I1,I2,...,In$ на вещественной оси. Построим для этих интервалов граф $G$ на $n$ вершинах $x_1,...,x_n$, соединяя вершины $x_i$ и $x_j$ ребром в том и только в том случае, когда пересечение $I_i \cap I_j \neq \varnothing$. Такой граф $G$ называется интервальным графом (см. рис.). 
+
+	\begin{figure}[H]
+		\centering
+		\includegraphics[width=8cm]{interval-graph-coloring.png}
+	\end{figure}
+
+	Доказать, что любой интервальный граф является совершенным.
+\end{problem}
+
+
+\begin{proof}[Эталонное доказательство]
+	\iiTODO
+	
+	Будем раскрашивать вершины интервального графа жадным алгоритмом, упорядочив их предварительно по возрастанию левых концов соответствующих интервалов. Рассмотрим момент, в который жадный алгоритм использовал максимальный цвет $k$, раскрасив им какую-то вершину $x$, соответствующую интервалу $[a,b]$. Так как алгоритм использовал цвет $k$, вершина $x$ была смежна с какими-то $k-1$ уже окрашенными в разные цвета вершинами. Им соответствовали интервалы, начинающиеся левее aa (поскольку вершины уже окрашены), а заканчивающиеся — правее (поскольку есть пересечение с $[a,b]$). Все рассмотренные интервалы пересекаются в точке $a$ а, следовательно, в интервальном графе соответствующие вершины образуют клику размера $k$.
+	Таким образом, $X(G)<=k<=\omega$, но мы знаем, что $\omega(G)<=X(G)$, а значит, $\omega(G)=\iiChi(G)$.
+\end{proof}
+
+\begin{proof}[Моё кривое доказательство]
+
+	\iiTODO
+
+	Иллюстрация к задаче содержит толстую подсказку о способе рассуждений.
+
+	\begin{figure}[H]
+		\centering
+		\includegraphics[width=8cm]{interval-graph-coloring--solution.png}
+	\end{figure}
+
+	Разобьём все интервалы на непересекающиеся подмножества, соответствующие независимым подмножествам вершин в графе. Первый интервал выберем произвольно. Пусть это будет $I_4$. Затем будем двигаться от правого края интервала вправо, пока не встретим первый непересекающийся с ним интервал ($I_6$). Двигаясь вправо от его правого края найдём следующий и так далее, пока не достигнем максимума всех интервалов. Теперь дижемся влево от левого края $I_4$, пока не найдём предыдущий непересекающийся с ним интервал ($I_1$) или не достигнем минимума всех интервалов. Так мы построим максимальное множество $S_1$ всех попарно непересекающихся интервалов, включающих $I_4$. В нашем случае $S_1=\{I_1,I_4,I_6\}$. Ему в графе соответсвует независимое множество вершин $\{x_1,x_4,x_6\}$.
+	
+	Теперь возьмём какой-либо интервал, не входящий в $S_1$, т.е. пересекающийся с любым из интервалов $S_1$, например $I_3$ и повторим процесс. Получим множество $S_2=\{I_3,I_7\}$. Затем любой интервал, не входящий в $S_1+S_2$, повторим процесс и получим множество $S_3=\{I_2,I_5\}$ попарно непересекающихся между собой интервалов, которые пересекаются с одним из интервалов из $S_1+S_2$. Продолжим процесс, пока интервалы не закончатся.
+	
+	Каждому множеству интервалов $S_i$ соответствует максимальное по построению независимое множество вершин в графе, причем вершины множества $S_2$ имеют рёбра с $S_1$, $S_3$ c $S_1+S_2$ итд. Если раскрасить $S_1$ в 1-й цвет, $S_2$ во 2-й итд, то мы получим правильную раскраску графа. Этот набор множеств минимален по построению, то есть количество множеств $S_i$ равно хроматическому числу графа $\chi$.
+	
+	Теперь расположим интервалы множества $S_2$ над интервалами $S_1$, $S_3$ над $S_2$ итд, получив вертикальный стек. Там, где некоторая вертикаль пересекает несколько интервалов (они будут из разных множеств), мы получим \textit{клику}. Например, $[I_5,I_3,I_4]$, как показано на рисунке. Максимальный размер клики (кликовое число) будет равен высоте самого высокого интервала в стеке, т.е. числу множеств $S_i$. А оно, как показано выше, равно хроматическому числу. То есть граф является совершенным.
+\end{proof}
+
+
+\begin{problem}
+	Доказать, что в графе $G$ c $m$ ребрами хроматическое число удовлетворяет неравенству $\chi(\chi-1) \leqslant 2m$
+\end{problem}
+
+\begin{proof}[Моё доказательство]
+	Возьмём минимальную правильную раскраску в $\chi$ цветов и разделим все вершины по цвету  на множества $S_1,...,S_{\chi}$. Если бы нашлась такая пара $S_i,S_j$, что между ними не было бы рёбер, то второе множество можно было бы перекрасить в цвет первого и уменьшить количество цветов на единицу, что противоречит минимальности. Поэтому между любой парой этих множеств всегда найдётся хотя бы одно ребро. Всего таких пар (и таких рёбер) будет $\displaystyle\frac{\chi(\chi-1)}{2}$. А кроме этих, в графе могут быть и другие рёбра, то есть $\displaystyle m \geqslant \frac{\chi(\chi-1)}2$, что и требовалось доказать.
+\end{proof}
+
+\begin{proof}[Еще одно хорошее доказательство]
+	\iiTODO
+	
+	Пронумеруем все цвета от 1 $\chi$. Теперь $2m$ - это, как мы уже знаем, сумма степеней всех вершин. Теперь покажем, что сумма степеней всех вершин не может быть меньше $\chi(\chi-1)$.
+	Сумма степеней вершин может быть равна $\chi(\chi-1)$, например, в полном графе. Теперь покажем почему меньше не может быть. От противного, пусть у нас сумма степеней вершин в каком-то графе равна $k$, которое меньше $\chi(\chi-1)$.
+	Теперь покажем, что каждый цвет $i$ смежен со всеми $(\chi-1)$ другими  цветами. (Цвета смежны, если существует смежные вершины, покрашенные в соответствующие цвета). От противного. Если это не так, то существует цвет $j$, с которым $i$ не смежен, тогда мы можем все вершины покрашенные в цвет $i$ перекрасить в $j$, и раз они такие цвета не были смежны, то после перекраски никакие две вершины, покрашенные в цвет $j$, не будут смежны. Значит, мы может просто убрать $i$ и получим, что хроматическое число меньше чем $\chi$. Противоречие.
+	Получили, что каждый цвет $i$  смежен со всеми $\chi-1$  другими  цветами. А значит, при расчете суммы степеней вершин, будут учтены эти смежности, которые дают вклад $\chi(\chi-1)$. Отсюда получаем, что $\chi(\chi-1) \leqslant k$, а изначально мы утверждали обратное. Противоречие.
+	В итоге, сумма степеней всех вершин не может быть меньше $\chi(\chi-1)$. А значит, и $2m$ не может быть меньше этого значения. 
+\end{proof}
+
+
+\subsection{Хроматический многочлен}
+
+\begin{problem}
+	Докажите, что хроматический полином для цикла $C_n$ имеет вид
+	$P_n(z) = (-1)^n(z-1)+(z-1)^n$.
+\end{problem}
+\begin{proof}
+	Доказывать будем по индукции.
+	
+	В качестве базы индукции возьмём минимальный цикл на 3 вершинах $C_3$. Он совпадает с $K_3$, и его хроматический многочлен был найден на лекции
+	
+	$P_{C_3}(z) = P_{K_3}(z) = z(z-1)(z-2) = z^3-3z^2+2z = z^3-3z^2+2z+(z-1)-(z-1)
+	 = (z^3-3z^2+3z-1)+(-1)(z-1) = (z-1)^3+(-1)^3(z-1)$.
+	
+	База индукции доказана.
+	
+	На шаге индукции предположим, что формула верна для $C_n$ и проверим её для цикла $C_{n+1}$.
+	
+	Воспользуемся доказанным на лекции правилом:
+	$P_{G}(z) = P_{G-e}(z) - P_{G\setminus e}(z)$.
+	
+	Если удалить из цикла $C_{n+1}$ одно ребро,
+	то получится дерево $C_{n+1}-e=T_{n+1}$ с хроматическим многочленом
+	$P_{T_{n+1}}(z)=z(z-1)^{n+1-1}$.
+	
+	Если стянуть одно ребро, то получится цикл на единицу меньше $C_{n+1}\setminus e=C_n$.
+	По предположению индукции его хроматический многочлен есть
+	$P_{C_{n}}(z) = (z-1)^n + (-1)^n(z-1)$.
+	
+	Тогда имеем
+	$P_{C_{n+1}}(z) = P_{C_{n+1}-e}(z) - P_{C_{n+1}\setminus e}(z)
+	 = P_{T_{n+1}}(z) - P_{C_{n}}(z) = z(z-1)^n - (z-1)^n - (-1)^n(z-1)
+	 = (z-1)(z-1)^n + (-1)(-1)^n(z-1) = (z-1)^{n+1} + (-1)^{n+1}(z-1)$.
+	
+	Шаг индукции доказан. Формула верна для всех $n$.
+\end{proof}
+
+
+\begin{problem}[\href{https://stepik.org/lesson/12299/step/9}{ссылка}]
+
+	\iiTODO
+
+	Дан связный граф $G$. Хроматический многочлен $P_G(z)$ известен. Построим граф $H$ следующим образом:
+	\begin{enumerate}
+		\item Выделим в графе $G$ произвольную вершину $x$.
+		\item Построим изоморфный графу $G$ граф $G'$. Пусть при этом изоморфизме $x$ переходит в $x'$.
+		\item ``Склеим'' вершины $x$ и $x'$.
+	\end{enumerate}
+	Таким образом, граф $H$ состоит из двух одинаковых подграфов, которые пересеклись в одной вершине. Выведите формулу хроматического многочлена $P_H(z)$ для графа $H$. В формуле вместо $P_G(z)$ используйте переменную $y$.
+\end{problem}
+\begin{proof}
+	$\displaystyle P_H(z)=\frac{y^2}{z}$
+	
+	На мой взгляд, самое очевидное решение предполагает чисто комбинаторный ответ и с полиномами работать  практически не приходится.
+	
+	В ветке ниже уже обсуждали, но все равно напишу здесь с картинкой, чтобы сразу в глаза бросалось. Рассмотрите два дерева и соедините их:
+	
+	\includegraphics[width=6cm]{chromatic-number-after-merge.png}
+	
+	Ещё как простой пример для рассмотрения - два графа $K_2$ и результат их слияния $T_3$.
+\end{proof}
 
 
 
